# melee_analytics_platform

./: .gitignore  01_get_training_data.ipynb  02_training_notebook.ipynb  03_streamer_testing.ipynb  04_melee_testing.ipynb  Progress_Documentation.md  README.md  pyproject.toml
get_train_data/: get_melee_vods.py  get_training_data.ipynb
melee_analytics_platform/: __init__.py
melee_analytics_platform/get_train_data/: __init__.py  get_melee_vods.py  images_from_vods.py
melee_analytics_platform/junk/: label_studio_injection.ipynb  label_studio_utils.py
melee_analytics_platform/melee_stuff/: __init__.py  melee_catcher.py  melee_watcher.py
melee_analytics_platform/pascal_voc_xml_modeling/: __init__.py  custom_utils.py  data_utils.py  datasets.py  model.py  train.py
melee_analytics_platform/stream_searcher/: __init__.py  selenium_helpers.py  stream_predict.py  twitch_streamer.py  youtube_streamer.py
melee_analytics_platform/utils/: selenium_helpers.py  utils.py
notebooks/: 01_get_training_data.ipynb  02_training_notebook.ipynb  03_streamer_testing.ipynb
pascal_voc_xml_modeling/: config.py  data_utils.py  model.py  training_notebook.ipynb
